feat: implement README automation with jq/sd and mise dependency management

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "validate": "ajv validate -s tests/schema.json -d 'tests/level-*.json' -d 'tests/errors.json' --verbose && cd tests && ajv validate -s pretty-print-schema.json -r schema.json -d pretty-print.json --verbose",
     "validate:core": "ajv validate -s tests/schema.json -d 'tests/level-*.json' -d 'tests/errors.json' --verbose",
     "validate:pretty-print": "cd tests && ajv validate -s pretty-print-schema.json -r schema.json -d pretty-print.json --verbose",
-    "test": "npm run validate"
+    "docs:stats": "./scripts/collect-stats.sh",
+    "docs:update": "./scripts/update-readme.sh",
+    "docs:check": "./scripts/update-readme.sh && git diff --exit-code README.md",
+    "test": "npm run validate && npm run docs:check"
   },
   "keywords": [],
   "author": "",
