--- a/.mise.toml
+++ b/.mise.toml
@@ -1,12 +1,6 @@
 [tools]
-# JSON processor for extracting test counts
-jq = "latest"
-# Fast find alternative (better than find)
-fd = "latest"
-# Fast find-and-replace tool (better than sed)
-sd = "latest"
-# Interactive CLI components and styling
-gum = "latest"
+# Node.js for running ESM scripts
+node = "latest"
 
 [env]
 # Ensure tools are available in PATH
