--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "validate:core": "ajv validate -s tests/schema.json -d 'tests/!(schema).json' --verbose",
     "validate:pretty-print": "ajv validate -s tests/schema.json -d 'tests/pretty-print.json' --verbose",
     "docs:stats": "node scripts/collect-stats.mjs",
-    "docs:update": "node scripts/update-readme.mjs",
-    "docs:check": "node scripts/update-readme.mjs && git diff --exit-code README.md",
+    "docs:update": "node scripts/update-readme-remark.mjs",
+    "docs:check": "node scripts/update-readme-remark.mjs && git diff --exit-code README.md",
     "docs:schema": "node scripts/generate-schema-docs.mjs",
     "test": "npm run validate && npm run docs:check"
   },
@@ -27,5 +27,13 @@
   },
   "overrides": {
     "fast-json-patch": "^3.1.1"
+  },
+  "dependencies": {
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5",
+    "unist-util-select": "^5.1.0",
+    "unist-util-visit": "^5.0.0"
   }
 }
