refactor: consolidate documentation and improve project organization
- Archive Serena memories (26 files) to .serena/archive/ for historical reference
- Archive scattered planning documentation (6 directories) to docs/archive/
- Document Node.js dependency necessity in package.json and justfile
- Reduce active documentation files from 47 to 12 (74% reduction)
- Preserve all historical content while improving project navigation
- Maintain build system functionality (all commands tested)

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -18,5 +18,7 @@
     "unified": "^11.0.5",
     "unist-util-select": "^5.1.0",
     "unist-util-visit": "^5.0.0"
-  }
+  },
+  "devDependencies": {},
+  "_note": "Dependencies used for robust README.md maintenance via update-readme-remark.mjs - provides AST-based markdown processing for safe test count updates"
 }
