chore: improve changelog config with scope grouping
- Add commit_parsers to skip chore, build, ci, and release scope
- Add default_scope for unscoped commits to appear under "General"
- Change template to group by scope first, then by type
- Add cliff-by-type.toml as alternative (type-first grouping)

--- a/cliff-by-type.toml
+++ b/cliff-by-type.toml
@@ -9,11 +9,11 @@ body = """
 {% else %}\
     ## [Unreleased]
 {% endif %}\
-{% for scope, commits in commits | group_by(attribute="scope") %}
-    ### {% if scope %}{{ scope | upper_first }}{% else %}General{% endif %}
-    {% for group, grouped_commits in commits | group_by(attribute="group") %}
-        #### {{ group | striptags | trim | upper_first }}
-        {% for commit in grouped_commits %}\
+{% for group, commits in commits | group_by(attribute="group") %}
+    ### {{ group | striptags | trim | upper_first }}
+    {% for scope, scoped_commits in commits | group_by(attribute="scope") %}
+        #### {% if scope %}{{ scope | upper_first }}{% else %}General{% endif %}
+        {% for commit in scoped_commits %}\
             - {{ commit.message | upper_first }}
         {% endfor %}
     {% endfor %}
