chore: add commitlint with selective scope validation
- Add commitlint with selective-scope plugin for per-type scope rules
- Require scope for feat, fix, refactor, perf, test, revert, style
- Allow scopeless commits for chore, ci, build, docs
- Allowed scopes: schema, tests, generation, config, test-reader, cli
- Add hk.pkl for commit-msg hook using commitlint
- Add PR title validation workflow using commitlint
- Remove cocogitto from mise (commitlint replaces it)

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,7 +1,8 @@
 [tools]
 git-cliff = "latest"
 go = "1.25.4"
-# Node.js for running ESM scripts
+hk = "latest"
+# Node.js for running ESM scripts and commitlint
 node = "latest"
 
 [env]
