--- a/cliff.toml
+++ b/cliff.toml
@@ -5,7 +5,7 @@ All notable changes to the CCL test data will be documented in this file.\n
 """
 body = """
 {% if version %}\
-    ## [{{ version | trim_start_matches(pat="data-") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
+    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
 {% else %}\
     ## [Unreleased]
 {% endif %}\
@@ -42,7 +42,7 @@ commit_parsers = [
     { message = "^test", group = "Testing", default_scope = "general" },
 ]
 filter_commits = false
-tag_pattern = "data-v[0-9].*"
+tag_pattern = "v[0-9].*"
 
 [bump]
 features_always_bump_minor = true
