chore: fix .gitignore patterns for test-reader
Use more specific patterns to avoid matching source directories:
- /test-reader for root binary
- bin/ with trailing slash for directory
- cmd/test-reader/test-reader for IDE-built binary

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,11 @@ Thumbs.db
 
 # Claude local settings (keep global but ignore local)
 .claude/settings.local.json
-bin
-test-reader
+
+# Built binaries
+bin/
+/test-reader
 .serena/
+
+# Binary in source directory (built by IDE/editor)
 cmd/test-reader/test-reader
