--- a/cliff.toml
+++ b/cliff.toml
@@ -9,18 +9,31 @@ body = """
 {% else %}\
     ## [Unreleased]
 {% endif %}\
-{% for scope, commits in commits | group_by(attribute="scope") %}
-    ### {% if scope %}{{ scope | upper_first }}{% else %}General{% endif %}
-    {% for group, grouped_commits in commits | group_by(attribute="group") %}
+{% set scope_order = ["tests", "schema", "test-reader", "cli"] %}\
+{% for scope_name in scope_order %}\
+    {% set scope_commits = commits | filter(attribute="scope", value=scope_name) %}\
+    {% if scope_commits | length > 0 %}\
+    ### {{ scope_name | replace(from="-", to=" ") | title }}
+    {% for group, grouped_commits in scope_commits | group_by(attribute="group") %}\
         #### {{ group | striptags | trim | upper_first }}
         {% for commit in grouped_commits %}\
             - {{ commit.message | upper_first }}
         {% endfor %}
     {% endfor %}
+    {% endif %}\
 {% endfor %}
 """
 footer = ""
 trim = true
+
+[changelog.scopes]
+build = "Build"
+cli = "CLI"
+config = "Configuration"
+generation = "Generator"
+schema = "Schema"
+test-reader = "Test Reader"
+tests = "Tests"
 
 [git]
 conventional_commits = true
@@ -32,14 +45,17 @@ commit_parsers = [
     { message = "^build", skip = true },
     { message = "^ci", skip = true },
     { scope = "release", skip = true },
+    { scope = "build", skip = true },
+    { scope = "config", skip = true },
+    { scope = "generation", skip = true },
 
-    # Group by type (with default scope for unscoped commits)
-    { message = "^feat", group = "Features", default_scope = "general" },
-    { message = "^fix", group = "Bug Fixes", default_scope = "general" },
-    { message = "^doc", group = "Documentation", default_scope = "general" },
-    { message = "^perf", group = "Performance", default_scope = "general" },
-    { message = "^refactor", group = "Refactor", default_scope = "general" },
-    { message = "^test", group = "Testing", default_scope = "general" },
+    # Group by type (scoped commits only)
+    { message = "^feat", group = "Features" },
+    { message = "^fix", group = "Bug Fixes" },
+    { message = "^doc", group = "Documentation" },
+    { message = "^perf", group = "Performance" },
+    { message = "^refactor", group = "Refactor" },
+    { message = "^test", group = "Testing" },
 ]
 filter_commits = false
 tag_pattern = "v[0-9].*"
