--- a/package.json
+++ b/package.json
@@ -1,127 +1,32 @@
 {
   "name": "ccl-test-data",
   "version": "1.0.0",
-  "description": "> \\[!NOTE] > This is a **comprehensive JSON test suite** for CCL implementations across all programming languages, featuring **feature-based classification** for precise test selection and progressive implementation support.",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "dependencies": {
-    "ansi-regex": "^6.2.2",
-    "ansi-styles": "^6.2.3",
-    "bail": "^2.0.2",
-    "balanced-match": "^1.0.2",
-    "boolbase": "^1.0.0",
-    "ccount": "^2.0.1",
-    "character-entities": "^2.0.2",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "cross-spawn": "^7.0.6",
-    "css-selector-parser": "^3.1.3",
-    "debug": "^4.4.1",
-    "decode-named-character-reference": "^1.2.0",
-    "dequal": "^2.0.3",
-    "devlop": "^1.1.0",
-    "eastasianwidth": "^0.2.0",
-    "emoji-regex": "^9.2.2",
-    "escape-string-regexp": "^5.0.0",
-    "extend": "^3.0.2",
-    "foreground-child": "^3.3.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-plain-obj": "^4.1.0",
-    "isexe": "^2.0.0",
-    "jackspeak": "^3.4.3",
-    "longest-streak": "^3.1.0",
-    "lru-cache": "^10.4.3",
-    "markdown-table": "^3.0.4",
-    "mdast-util-find-and-replace": "^3.0.2",
-    "mdast-util-from-markdown": "^2.0.2",
-    "mdast-util-gfm": "^3.1.0",
-    "mdast-util-gfm-autolink-literal": "^2.0.1",
-    "mdast-util-gfm-footnote": "^2.1.0",
-    "mdast-util-gfm-strikethrough": "^2.0.0",
-    "mdast-util-gfm-table": "^2.0.0",
-    "mdast-util-gfm-task-list-item": "^2.0.0",
-    "mdast-util-phrasing": "^4.1.0",
-    "mdast-util-to-markdown": "^2.1.2",
-    "mdast-util-to-string": "^4.0.0",
-    "micromark": "^4.0.2",
-    "micromark-core-commonmark": "^2.0.3",
-    "micromark-extension-gfm": "^3.0.0",
-    "micromark-extension-gfm-autolink-literal": "^2.1.0",
-    "micromark-extension-gfm-footnote": "^2.1.0",
-    "micromark-extension-gfm-strikethrough": "^2.1.0",
-    "micromark-extension-gfm-table": "^2.1.1",
-    "micromark-extension-gfm-tagfilter": "^2.0.0",
-    "micromark-extension-gfm-task-list-item": "^2.1.0",
-    "micromark-factory-destination": "^2.0.1",
-    "micromark-factory-label": "^2.0.1",
-    "micromark-factory-space": "^2.0.1",
-    "micromark-factory-title": "^2.0.1",
-    "micromark-factory-whitespace": "^2.0.1",
-    "micromark-util-character": "^2.1.1",
-    "micromark-util-chunked": "^2.0.1",
-    "micromark-util-classify-character": "^2.0.1",
-    "micromark-util-combine-extensions": "^2.0.1",
-    "micromark-util-decode-numeric-character-reference": "^2.0.2",
-    "micromark-util-decode-string": "^2.0.1",
-    "micromark-util-encode": "^2.0.1",
-    "micromark-util-html-tag-name": "^2.0.1",
-    "micromark-util-normalize-identifier": "^2.0.1",
-    "micromark-util-resolve-all": "^2.0.1",
-    "micromark-util-sanitize-uri": "^2.0.1",
-    "micromark-util-subtokenize": "^2.1.0",
-    "micromark-util-symbol": "^2.0.1",
-    "micromark-util-types": "^2.0.2",
-    "minipass": "^7.1.2",
-    "ms": "^2.1.3",
-    "nth-check": "^2.1.1",
-    "package-json-from-dist": "^1.0.1",
-    "path-key": "^3.1.1",
-    "path-scurry": "^1.11.1",
-    "remark-gfm": "^4.0.1",
-    "remark-parse": "^11.0.0",
-    "remark-stringify": "^11.0.0",
-    "rimraf": "^5.0.10",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "signal-exit": "^4.1.0",
-    "string-width": "^5.1.2",
-    "string-width-cjs": "^4.2.3",
-    "strip-ansi": "^7.1.2",
-    "strip-ansi-cjs": "^6.0.1",
-    "trough": "^2.2.0",
-    "unified": "^11.0.5",
-    "unist-util-is": "^6.0.0",
-    "unist-util-select": "^5.1.0",
-    "unist-util-stringify-position": "^4.0.0",
-    "unist-util-visit": "^5.0.0",
-    "unist-util-visit-parents": "^6.0.1",
-    "vfile": "^6.0.3",
-    "vfile-message": "^4.0.3",
-    "which": "^2.0.2",
-    "wrap-ansi": "^8.1.0",
-    "wrap-ansi-cjs": "^7.0.0",
-    "zwitch": "^2.0.4"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "commitlint-plugin-selective-scope": "^1.0.1"
-  },
+  "description": "Comprehensive JSON test suite for CCL implementations across all programming languages",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "readme:update": "node scripts/update-readme-remark.mjs"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tylerbutler/ccl-test-data.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/tylerbutler/ccl-test-data/issues"
   },
-  "homepage": "https://github.com/tylerbutler/ccl-test-data#readme"
+  "homepage": "https://github.com/tylerbutler/ccl-test-data#readme",
+  "dependencies": {
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5",
+    "unist-util-select": "^5.1.0",
+    "unist-util-visit": "^5.0.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "commitlint-plugin-selective-scope": "^1.0.1"
+  }
 }
