--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,5 +53,5 @@ jobs:
 
       - name: Check docs are up-to-date
         run: |
-          cd scripts && node update-readme-remark.mjs
+          node scripts/update-readme-remark.mjs
           git diff --exit-code README.md
