ci: use mise-action and split into parallel jobs
- Replace separate setup-go and setup-node with mise-action
- Add just to mise.toml for CI
- Split CI into parallel jobs: validate, lint, test, docs
- Use just commands instead of inline scripts

--- a/.mise.toml
+++ b/.mise.toml
@@ -2,6 +2,7 @@
 git-cliff = "latest"
 go = "1.25.4"
 hk = "latest"
+just = "latest"
 # Node.js for running ESM scripts and commitlint
 node = "latest"
 
